syntax = "proto3";

package order;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "order/bank_detail_service.proto";
import "order/common_types.proto";

option go_package = "github.com/LavaJover/shvark-order-service/proto/gen;orderpb";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc ApproveOrder (ApproveOrderRequest) returns (ApproveOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
    rpc AcceptOrder (AcceptOrderRequest) returns (AcceptOrderResponse);
    rpc GetOrderByID (GetOrderByIDRequest) returns (GetOrderByIDResponse);
    rpc GetOrderByMerchantOrderID (GetOrderByMerchantOrderIDRequest) returns (GetOrderByMerchantOrderIDResponse);
    rpc GetOrdersByTraderID (GetOrdersByTraderIDRequest) returns (GetOrdersByTraderIDResponse);
    
    rpc CreateOrderDispute (CreateOrderDisputeRequest) returns (CreateOrderDisputeResponse);
    rpc AcceptOrderDispute (AcceptOrderDisputeRequest) returns (AcceptOrderDisputeResponse);
    rpc RejectOrderDispute (RejectOrderDisputeRequest) returns (RejectOrderDisputeResponse);
    rpc GetOrderDisputeInfo (GetOrderDisputeInfoRequest) returns (GetOrderDisputeInfoResponse);
    rpc FreezeOrderDispute (FreezeOrderDisputeRequest) returns (FreezeOrderDisputeResponse);
    rpc GetOrderDisputes (GetOrderDisputesRequest) returns (GetOrderDisputesResponse);

    rpc GetOrderStatistics (GetOrderStatisticsRequest) returns (GetOrderStatisticsResponse);
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);
    
    rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse);

    rpc ProcessAutomaticPayment(ProcessAutomaticPaymentRequest) returns (ProcessAutomaticPaymentResponse);
    rpc GetAutomaticLogs(GetAutomaticLogsRequest) returns (GetAutomaticLogsResponse);
    rpc GetAutomaticStats(GetAutomaticStatsRequest) returns (GetAutomaticStatsResponse);
}

message AcceptOrderRequest {
    string order_id = 1;
}

message AcceptOrderResponse {

}

// ==================== AUTOMATIC PAYMENT ====================

message GetAutomaticStatsRequest {
    string trader_id = 1;
    int32 days = 2; // Количество дней для статистики (по умолчанию 7)
}

message DeviceStats {
    int64 total_attempts = 1;
    int64 success_count = 2;
    double success_rate = 3;
}

message AutomaticStats {
    int64 total_attempts = 1;
    int64 successful_attempts = 2;
    int64 approved_orders = 3;
    int64 not_found_count = 4;
    int64 failed_count = 5;
    double avg_processing_time = 6;
    map<string, DeviceStats> device_stats = 7;
}

message GetAutomaticStatsResponse {
    AutomaticStats stats = 1;
}

message ProcessAutomaticPaymentRequest {
    string group = 1;
    double amount = 2;
    string payment_system = 3;
    string direction = 4;
    repeated string methods = 5;
    int64 received_at = 6;
    string text = 7;
    map<string, string> metadata = 8;
}

message ProcessAutomaticPaymentResponse {
    string action = 1;          // approved, not_found, failed
    string message = 2;
    string order_id = 3;
    bool success = 4;
    repeated OrderProcessingResult results = 5;
}

message OrderProcessingResult {
    string order_id = 1;
    string action = 2;          // approved, failed, already_processed
    bool success = 3;
    string error = 4;
}

message AutomaticLog {
    string id = 1;
    string device_id = 2;
    string trader_id = 3;
    string order_id = 4;
    double amount = 5;
    string payment_system = 6;
    string direction = 7;
    repeated string methods = 8;
    google.protobuf.Timestamp received_at = 9;
    string text = 10;
    string action = 11;         // found, not_found, approved, failed, search_error
    bool success = 12;
    int32 orders_found = 13;
    string error_message = 14;
    int64 processing_time = 15; // миллисекунды
    string bank_name = 16;
    string card_number = 17;
    google.protobuf.Timestamp created_at = 18;
}

message AutomaticLogFilter {
    string device_id = 1;
    string trader_id = 2;
    optional bool success = 3;  // Это генерирует *bool в Go
    string action = 4;
    google.protobuf.Timestamp start_date = 5;
    google.protobuf.Timestamp end_date = 6;
    int32 limit = 7;
    int32 offset = 8;
}

message GetAutomaticLogsRequest {
    AutomaticLogFilter filter = 1;
}

message GetAutomaticLogsResponse {
    repeated AutomaticLog logs = 1;
    int32 total = 2;
}

message GetAllOrdersRequest {
    optional string trader_id = 1;
    optional string merchant_id = 2;
    optional string order_id = 3;
    optional string merchant_order_id = 4;
    optional string status = 5;
    optional string bank_code = 6;
    optional google.protobuf.Timestamp time_opening_start = 7;
    optional google.protobuf.Timestamp time_opening_end = 8;
    optional double amount_min = 9;
    optional double amount_max = 10;
    optional string type = 11;
    optional string payment_system = 12;
    int32 page = 13;
    int32 limit = 14;
    optional string device_id = 15;
    optional string sort = 16;
}

message GetAllOrdersResponse {
    repeated Order orders = 1;
    Pagination pagination = 2;
}

message GetOrdersRequest {
    optional string deal_id = 1;
    optional string type = 2;
    optional string status = 3;
    optional google.protobuf.Timestamp time_opening_start = 4;
    optional google.protobuf.Timestamp time_opening_end = 5;
    optional double amount_min = 6;
    optional double amount_max = 7;
    int32 page = 8;
    int32 size = 9;
    optional string sort = 10;
    string merchant_id = 11;
}

message GetOrdersResponse {
  repeated OrderResponse content = 1;
  Pageable pageable = 2;
  int32 total_elements = 3;
  int32 total_pages = 4;
  bool last = 5;
  int32 number_of_elements = 6;
  int32 size = 7;
  int32 number = 8;
  Sort sort = 9;
  bool first = 10;
  bool empty = 11;
}

message OrderResponse {
  string id = 1;
  google.protobuf.Timestamp time_opening = 2;
  google.protobuf.Timestamp time_expires = 3;
  google.protobuf.Timestamp time_complete = 4;
  string store_name = 5;
  string type = 6;
  string status = 7;
  double currency_rate = 8;
  Amount sum_invoice = 9;
  Amount sum_deal = 10;
  Requisites requisites = 11;
  string email = 12;
}

message Amount {
  double amount = 1;
  string currency = 2;
}

message Requisites {
  string issuer = 1;
  string holder_name = 2;
  string phone_number = 3;
  string card_number = 4;
}

message Pageable {
  Sort sort = 1;
  int32 page_number = 2;
  int32 page_size = 3;
  int32 offset = 4;
  bool paged = 5;
  bool unpaged = 6;
}

message Sort {
  bool unsorted = 1;
  bool sorted = 2;
  bool empty = 3;
}

message GetOrderStatisticsRequest {
    string trader_id = 1;
    google.protobuf.Timestamp date_from = 2;
    google.protobuf.Timestamp date_to = 3;
}

message GetOrderStatisticsResponse {
    int64 total_orders = 1;
    int64 succeed_orders = 2;
    int64 canceled_orders = 3;
    int64 active_orders = 4;
    float processed_amount_fiat = 5;
    float processed_amount_crypto = 6;
    float canceled_amount_fiat = 7;
    float canceled_amount_crypto = 8;
    float income_crypto = 9;
}

message GetOrderDisputesRequest {
    int64 page = 1;
    int64 limit = 2;
    optional string status = 3;
    optional string trader_id = 4;
    optional string dispute_id = 5;
    optional string merchant_id = 6;
    optional string order_id = 7;
}

message GetOrderDisputesResponse{
    repeated OrderDispute disputes = 1;
    Pagination pagination = 2;
}

message GetOrderByMerchantOrderIDRequest {
    string merchant_order_id = 1;
}

message GetOrderByMerchantOrderIDResponse{
    Order order = 1;
}

message FreezeOrderDisputeRequest {
    string dispute_id = 1;
}

message FreezeOrderDisputeResponse {
}

message CreateOrderDisputeRequest {
    string order_id = 1;
    string proof_url = 2;
    string dispute_reason = 3; // UNKNOWN, HAS_PAYMENT, NO_PAYMENT, INVALID_SUM
    google.protobuf.Duration ttl = 4;
    double dispute_amount_fiat = 5;
}

message CreateOrderDisputeResponse {
    string dispute_id = 1;
}

message OrderDispute {
    string dispute_id = 1;
    string order_id = 2;
    string proof_url = 3;
    string dispute_reason = 4;
    string dispute_status = 5; // open, accepted, rejected
    double dispute_amount_fiat = 6;
    double dispute_amount_crypto = 7;
    double dispute_crypto_rate = 8;
    Order order = 9;
    google.protobuf.Timestamp accept_at = 10;
}

message AcceptOrderDisputeRequest{
    string dispute_id = 1;
}

message AcceptOrderDisputeResponse{
    string message = 1;
}

message RejectOrderDisputeRequest {
    string dispute_id = 1;
}

message RejectOrderDisputeResponse{
    string message = 1;
}

message GetOrderDisputeInfoRequest {
    string dispute_id = 1;
}

message GetOrderDisputeInfoResponse {
    OrderDispute dispute = 1;
}

message CreateOrderRequest {
    string merchant_id = 1;
    double amount_fiat = 2;
    string currency = 3;
    string country = 4;
    string client_id = 5;
    string payment_system = 6;
    google.protobuf.Timestamp expires_at = 7;
    string merchant_order_id = 8;
    int32 shuffle = 9;
    string callback_url = 10;
    string bank_code = 11;
    string nspk_code = 12;
    string type = 13;
}

message CreateOrderResponse {
    Order order = 1;
}

message ApproveOrderRequest {
    string order_id = 1;
}

message ApproveOrderResponse {
    string message = 1;
}

message CancelOrderRequest {
    string order_id = 1;
}

message CancelOrderResponse {
    string message = 1;
}

message GetOrderByIDRequest {
    string order_id = 1;
}

message GetOrderByIDResponse {
    Order order = 1;
}

message Order {
    string order_id = 1;
    string status = 2;

    BankDetail bank_detail = 3;
    double amount_fiat = 4;
    double amount_crypto = 5;
    google.protobuf.Timestamp expires_at = 6;
    string merchant_order_id = 7;
    int32 shuffle = 8;
    string client_id = 9;
    string callback_url = 10;
    double trader_reward_percent = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
    bool recalculated = 14;
    double crypto_rub_rate = 15;
    string merchant_id = 16;
    string type = 17;
    OrderMetrics metrics = 18;
}

message OrderMetrics{
    google.protobuf.Timestamp completed_at = 1;
    google.protobuf.Timestamp cancelled_ad = 2;
    bool automatic_completed = 3;
    bool manually_completed = 4;
}

message GetOrdersByTraderIDRequest {
    string trader_id = 1;
    int64 page = 2;
    int64 limit = 3;
    string sort_by = 4;
    string sort_order = 5;
    OrderFilters filters = 6;
}

message GetOrdersByTraderIDResponse {
    repeated Order orders = 1;
    Pagination pagination = 2;
}